--- a/src/index.html
+++ b/src/index.html
@@ -4,71 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <title>PrimeiroSaúde</title>
-    <link rel="stylesheet" href="/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Página de Sintomas</title>
+    <link rel="stylesheet" href="style.css"/> 
 </head>
-<body>
-    <header>
-        <nav>
-            <img src="/imagens/heart.png" alt="logo" height="70" width="70">
-            <a class="logo" href="./index.html">PrimeiroSaúde</a>
-            <ul class="nav-list">
-                 <div class="login-bottom">
-                <li><a href="./assets/signin.html"><img src="./assets/imagem/iconlogin.png" alt="iconlogin" height="30" width="30"></a>
-                </div>
-                </li>
-            </ul>
-        </nav>
-        <div class="text-map"> 
-            Hospitais Próximos. 
-        </div>
-      </div>
-        <div class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d15111.308548515542!2d-44.42761960229925!3d-18.761256850819123!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1shospital!5e0!3m2!1spt-BR!2sbr!4v1681907558630!5m2!1spt-BR!2sbr" width="800" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-        
-        <div class="emergency">
-        <button type="button" class="btn btn-outline-danger">Emergência
-          <img src="./imagens/emergenciaicon.png" width="54" height="54">
-        </button>
-      </div>
-      <div class="search-box">
-        <input type="text" class="search-text" placeholder="Pesquisar...">
-        <a class="search-btn">
-          <img src="./assets/imagem/lupaciano.png" alt="lupa de pesquisa" width="35px" height="35px">
-        </a>
-        </div>
-        <div class="media">
-            <div class="media-body">
-              <img src="./assets/imagem/controleicon.png" width="64" height="64" class="mr-3" alt="...">
-              <h5 class="mt-0">Controle Glicêmico</h5> 
-              <p class="text-p">Registre seu nível glicêmico diaramente.</p>
-            </div>
-          </div>
-          <div class="media">
-            <img src="./assets/imagem/iconprimeirossocorros.png" width="64" height="64" class="mr-3" alt="...">
-            <div class="media-body">
-              <h5 class="mt-0">Guia de Primeiros Socorros.</h5>
-              <p>Lista de Primeiros Socorros.</p>
-            </div>
-            <div class="media">
-                <img src="./assets/imagem/sintomasicon.png" width="64" height="64" class="mr-3" alt="...">
-                <div class="media-body">
-                  <h5 class="mt-0">Guia informativo sobre Sintomas.</h5>
-                  <p>Identifique sintomas de infarto, avc e mais.</p>
-                </div>
-              </div>
-              <div class="media">
-                <img src="./assets/imagem/acidentedomestico64.png" width="64" height="64" class="mr-3" alt="...">
-                <div class="media-body">
-                  <h5 class="mt-0">Previna acidentes domésticos.</h5>
-                  <p>Guia auto explicativo sobre como evitar acidentes domésticos.</p>
-                </div>
-          </div>
-    </header>
-    <footer> 
-      Sobre nós | Informação de Privacidade.
-   </footer>
-</body>
+<button type="button" class="media"> <!---class=media alterei para btn btn-info-->
+    <a href="AVC.html"> 
+    <img src="icone5.jpg" width="60" height="60" class="imgRedonda" alt="...">
+    <div class="media-body">
+      <h5 class="mt-0"> AVC </h5> </a>  <!-- coloquei o "<a> de link" dentro da imagem e tbm do texto-->
+    </div>
+  </button>
+
+  <button type="button" class="media">
+    <a href="Ataque.html"> 
+    <img src="icone.jpg" width="60" height="60" class="imgRedonda" alt="...">
+    <div class="media-body">
+      <h5 class="mt-0">Ataque Cardíaco</h5> </a>
+    </div>
+  </button>
+ <!-- botões com link dentro do head??-->
+
+ <button type="button" class="media">
+  <a href="Ansiedade.html"> 
+  <img src="icone2.jpg" width="60" height="60" class="imgRedonda" alt="...">
+  <div class="media-body"> 
+    <h5 class="mt-0">Ansiedade</h5> </a>
+  </div> 
+</button>
+
+<button type="button" class="media">
+  <a href="Queda.html"> 
+  <img src="icone3.jpg" width="60" height="60" class="imgRedonda" alt="...">
+  <div class="media-body">
+    <h5 class="mt-0">Queda de Glicemia</h5> </a>
+  </div>
+</button>
+
 </html>
