--- a/src/Untitled-1.html
+++ b/src/Untitled-1.html
@@ -3,22 +3,22 @@
 <head>
   <title>Prevenção de Acidentes Domésticos</title>
 </head>
+<link rel="stylesheet" href="/src/css/acdomestico{.css">
 <body>
-
   <div class="container">
     <h1>Prevenção de Acidentes Domésticos</h1>
-<ul>
-  <li>Mantenha sua casa limpa e organizada</li>
-  <li>Use equipamentos de segurança adequados para atividades que podem ser perigosas</li>
-  <li>Armazene produtos químicos corretamente, como produtos de limpeza e pesticidas</li>
-  <li>Tenha cuidado ao cozinhar, sempre usando a proteção necessária e mantendo crianças longe enquanto cozinha</li>
-  <li>Instale detectores de fumaça</li>
-  <li>Esteja atento a fios elétricos e aparelhos eletrônicos, sempre mantendo longe de crianças e animais</li>
-  <li>Esteja sempre preparado para uma emergência, certificando-se de que tem um kit de primeiros socorros em sua casa e saiba como usá-lo</li>
-</ul>
-
-<p>Com essas dicas simples, você pode ajudar a prevenir acidentes domésticos e manter sua família e sua casa seguras.</p>
-<p>Lembre-se de que a prevenção é sempre melhor do que a cura.</p>
-  </div>
+    <ul>
+        <li>Mantenha sua casa limpa e organizada</li>
+        <li>Use equipamentos de segurança adequados para atividades que podem ser perigosas</li>
+        <li>Armazene produtos químicos corretamente, como produtos de limpeza e pesticidas</li>
+        <li>Tenha cuidado ao cozinhar, sempre usando a proteção necessária e mantendo crianças longe enquanto cozinha</li>
+        <li>Instale detectores de fumaça</li>
+        <li>Esteja atento a fios elétricos e aparelhos eletrônicos, sempre mantendo longe de crianças e animais</li>
+        <li>Esteja sempre preparado para uma emergência, certificando-se de que tem um kit de primeiros socorros em sua casa e saiba como usá-lo</li>
+      </ul>
+      
+      <p>Com essas dicas simples, você pode ajudar a prevenir acidentes domésticos e manter sua família e sua casa seguras.</p>
+      <p>Lembre-se de que a prevenção é sempre melhor do que a cura.</p>
+    </div>
 </body>
-</html>
+</html>      
