--- a/src/html/telefonesuteis.html
+++ b/src/html/telefonesuteis.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Página de Sintomas</title>
+    <title>Telefones Úteis</title>
     <link rel="stylesheet" href="/css/sintomas.css"/> 
 </head>
 <body>
@@ -21,7 +21,6 @@
         </ul>
     </nav>
 <button type="button" class="media"> <!---class=media alterei para btn btn-info-->
-   <!-- <a href="AVC.html"> -->
     <img src="/assets/imagem/bombeiro.jpg" width="60" height="60" class="imgRedonda" alt="...">
     <div class="media-body">
       <h5 class="mt-0"> Bombeiros - 193 </h5>  <!-- coloquei o "<a> de link" dentro da imagem e tbm do texto-->
@@ -29,7 +28,6 @@
   </button>
 
   <button type="button" class="media">
-   <!-- <a href="Ataque.html"> -->
     <img src="/assets/imagem/samu.jpg" width="60" height="60" class="imgRedonda" alt="...">
     <div class="media-body">
       <h5 class="mt-0">SAMU - 192</h5> 
@@ -38,7 +36,6 @@
  <!-- botões com link dentro do head??-->
 
  <button type="button" class="media">
-  <!--<a href="Ansiedade.html"> -->
   <img src="/assets/imagem/police.jpg" width="60" height="60" class="imgRedonda" alt="...">
   <div class="media-body"> 
     <h5 class="mt-0">Polícia Militar - 190</h5> 
@@ -46,7 +43,6 @@
 </button>
 
 <button type="button" class="media">
-  <!-- <a href="Queda.html">  -->
   <img src="/assets/imagem/CVV.jpg" width="60" height="60" class="imgRedonda" alt="...">
   <div class="media-body">
     <h5 class="mt-0">Centro de Valorização da Vida - 188</h5> 
