--- a/src/html/primeiros-socorros.html
+++ b/src/html/primeiros-socorros.html
@@ -5,17 +5,17 @@
   <title>Menu de Primeiros Socorros</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/primeirosocorro.css">
+  <link rel="stylesheet" href="../css/primeirosocorro.css">
 </head>
 
 <body>
   <header>
     <nav>
-      <a href="/index.html"><img src="/assets/imagem/heart.png" height="60" width="64"></a>
-        <a class="logo" href="/index.html">PrimeiroSaúde</a>
+      <a href="../../src/index.html"><img src="/assets/imagem/heart.png" height="60" width="64"></a>
+        <a class="logo" href="../../src/index.html">PrimeiroSaúde</a>
         <ul class="nav-list">
              <div class="login-bottom">
-            <li><a href="/html/signin.html"><img src="/assets/imagem/iconlogin.png" alt="iconlogin" height="30" width="30"></a>
+            <li><a href="../html/signin.html"><img src="/assets/imagem/iconlogin.png" alt="iconlogin" height="30" width="30"></a>
             </div>
             </li>
         </ul>
@@ -35,13 +35,15 @@
 
         <div id="collapse1" class="collapse show" aria-labelledby="heading1" data-parent="#accordion">
           <div class="card-body">
-            <h5 class="mb-3">O que fazer em caso de queimaduras:</h5>
-            <ul>
-              <li>Remova a fonte de calor</li>
-              <li>Resfrie a queimadura com água corrente fria por pelo menos 10 minutos</li>
-              <li>Cubra a queimadura com um pano limpo e seco</li>
-              <li>Procure atendimento médico, especialmente em queimaduras graves</li>
-            </ul>
+            <h5 class="mb-3">Instruções de Curativos Paliativos para Queimaduras:</h5>
+            <p>
+              1. Lave as mãos com água e sabão antes de tocar na queimadura.<br>
+              2. Lave suavemente a queimadura com água corrente fria.<br>
+              3. Seque a área delicadamente com um pano limpo.<br>
+              4. Aplique um curativo estéril na queimadura.<br>
+              5. Evite estourar as bolhas ou aplicar qualquer creme ou pomada.<br>
+              6. Procure atendimento médico para avaliação e tratamento adequado.
+            </p>
           </div>
         </div>
       </div>
@@ -58,14 +60,15 @@
 
         <div id="collapse2" class="collapse" aria-labelledby="heading2" data-parent="#accordion">
           <div class="card-body">
-            <h5 class="mb-3">O que fazer em caso de distensões e entorses:</h5>
-            <ul>
-              <li>Descanse a área afetada</li>
-              <li>Aplicar gelo na área por 15-20 minutos a cada hora</li>
-              <li>Comprima a área com um bandagem elástica</li>
-              <li>Eleve a área afetada para reduzir o inchaço</li>
-              <li>Procure atendimento médico, especialmente em casos graves</li>
-            </ul>
+            <h5 class="mb-3">Instruções de Curativos Paliativos para Distensões e Entorses:</h5>
+            <p>
+              1. Descanse a área afetada e evite movimentos bruscos.<br>
+              2. Aplique gelo na área lesionada por 20 minutos a cada 2 horas.<br>
+              3. Comprima a área com uma bandagem elástica para reduzir o inchaço.<br>
+              4. Eleve a área lesionada para ajudar a diminuir o inchaço.<br>
+              5. Tome medicamentos analgésicos, se necessário, seguindo as instruções do médico.<br>
+              6. Procure atendimento médico para uma avaliação adequada e tratamento.
+            </p>
           </div>
         </div>
       </div>
@@ -82,13 +85,14 @@
 
         <div id="collapse3" class="collapse" aria-labelledby="heading3" data-parent="#accordion">
           <div class="card-body">
-            <h5 class="mb-3">O que fazer em caso de lesões na cabeça:</h5>
-            <ul>
-              <li>Mantenha a pessoa calma e imobilizada</li>
-              <li>Verifique a respiração e a pulsação</li>
-              <li>Chame ajuda médica imediatamente</li>
-              <li>Não remova capacetes ou tentar movimentar a pessoa</li>
-            </ul>
+            <h5 class="mb-3">Instruções de Curativos Paliativos para Lesões na Cabeça:</h5>
+            <p>
+              1. Mantenha a pessoa calma e imobilizada.<br>
+              2. Verifique a respiração e a pulsação da pessoa.<br>
+              3. Chame ajuda médica imediatamente.<br>
+              4. Não remova capacetes ou tente mover a pessoa, a menos que seja necessário por razões de segurança.<br>
+              5. Aguarde a chegada da ajuda médica e siga as orientações do profissional de saúde.
+            </p>
           </div>
         </div>
       </div>
@@ -105,13 +109,13 @@
 
         <div id="collapse4" class="collapse" aria-labelledby="heading4" data-parent="#accordion">
           <div class="card-body">
-            <h5 class="mb-3">O que fazer em caso de hemorragia:</h5>
-            <ul>
-              <li>Pressione firmemente a área sangrante com um pano limpo ou atadura</li>
-              <li>Eleve a parte do corpo afetada, se possível</li>
-              <li>Mantenha a pressão até que a hemorragia pare</li>
-              <li>Procure atendimento médico imediatamente</li>
-            </ul>
+            <h5 class="mb-3">Instruções de Curativos Paliativos para Hemorragia:</h5>
+            <p>
+              1. Pressione firmemente a área sangrante com um pano limpo ou atadura.<br>
+              2. Eleve a parte do corpo afetada, se possível.<br>
+              3. Mantenha a pressão até que a hemorragia pare.<br>
+              4. Procure atendimento médico imediatamente para avaliação e tratamento adequado.
+            </p>
           </div>
         </div>
       </div>
@@ -121,7 +125,7 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <script src="/js/primeiros-socorros.js"></script>
+  <script src="../js/primeiros-socorros.js"></script>
 </body>
 
 </html>
