--- a/src/html/sobrenos.html
+++ b/src/html/sobrenos.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Sobre Nós</title>
-<link rel="stylesheet" href="/src/css/prevencaodeacidentes.css">
+<link rel="stylesheet" href="/src/css/sobrenos.css">
 </head>
 <body>
   <h1>O sistema criado pelos alunos da Universidade PUC Minas</h1>
