--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,11 @@
 <body>
   <header>
     <nav>
-      <a href="/index.html"><img src="/assets/imagem/heart.png" height="60" width="64"></a>
-      <a class="logo" href="/index.html">PrimeiroSaúde</a>
+      <a href="../src/index.html"><img src="../src/assets/imagem/heart.png" height="60" width="64"></a>
+      <a class="logo" href="../src/index.html">PrimeiroSaúde</a>
       <ul class="nav-list">
         <div class="login-bottom">
-          <li><a href="../src/html/signin.html"><img src="/assets/imagem/iconlogin.png" alt="iconlogin" height="30"
+          <li><a href="../src/html/signin.html"><img src="../src/assets/imagem/iconlogin.png" alt="iconlogin" height="30"
                 width="30"></a>
         </div>
         </li>
@@ -38,27 +38,27 @@
     <div class="emergency">
       <button type="button" class="btn btn-outline-danger">Emergência
         <a href="../src/html/telefonesuteis.html">
-          <img src="../assets/imagem/emergenciaicon.png" width="54" height="54">
+          <img src="../src/assets/imagem/emergenciaicon.png" width="54" height="54">
         </a>
       </button>
     </div>
     <div class="search-box">
       <input type="text" class="search-text" placeholder="Pesquisar...">
       <a class="search-btn">
-        <img src="../assets/imagem/lupaciano.png" alt="lupa de pesquisa" width="35px" height="35px">
+        <img src="../src/assets/imagem/lupaciano.png" alt="lupa de pesquisa" width="35px" height="35px">
       </a>
     </div>
     <button type="button" class="media">
       <div class="media-body">
         <a href="../src/html/paginicialglicemia.html">
-          <img src="../assets/imagem/controleicon.png" width="70" height="70" class="mr-3" alt="...">
+          <img src="../src/assets/imagem/controleicon.png" width="70" height="70" class="mr-3" alt="...">
           <h5 class="mt-0">Controle Glicêmico</h5>
           <p class="text-p">Registre seu nível glicêmico diaramente.</p>
         </a>
       </div>
     </button>
     <button type="button" class="media">
-      <img src="../assets/imagem/iconprimeirossocorros.png" width="70" height="70" class="mr-3" alt="...">
+      <img src="../src/assets/imagem/iconprimeirossocorros.png" width="70" height="70" class="mr-3" alt="...">
       <div class="media-body">
         <a href="../src/html/primeiros-socorros.html">
           <h5 class="mt-0">Guia de Primeiros Socorros.</h5>
@@ -67,7 +67,7 @@
 
       </div>
       <button type="button" class="media">
-        <img src="../assets/imagem/sintomasicon.png" width="70" height="70" class="mr-3" alt="...">
+        <img src="../src/assets/imagem/sintomasicon.png" width="70" height="70" class="mr-3" alt="...">
         <div class="media-body">
           <a href="../src/html/paginasintomas.html">
             <h5 class="mt-0">Guia informativo sobre Sintomas.</h5>
@@ -76,7 +76,7 @@
         </div>
       </button>
       <button type="button" class="media">
-        <img src="../assets/imagem/acidentedomestico64.png" width="70" height="70" class="mr-3" alt="...">
+        <img src="../src/assets/imagem/acidentedomestico64.png" width="70" height="70" class="mr-3" alt="...">
         <div class="media-body">
           <a href="../src/html/prevencaodeacidentes.html">
             <h5 class="mt-0">Previna acidentes domésticos.</h5>
@@ -87,7 +87,7 @@
       <br>
   </header>
   <footer>
-    Sobre nós | <a href="../src/html/politicadeprivacidade.html">Informação de Privacidade.
+   <a href="../src/html/sobrenos.html"> Sobre nós </a> | <a href="../src/html/politicadeprivacidade.html">Informação de Privacidade.
   </footer>
 </body>
 
