--- a/src/html/AVC.html
+++ b/src/html/AVC.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pag Sintomas</title>
-    <link rel="stylesheet" href="/css/avc.css"> 
+    <link rel="stylesheet" href="../css/avc.css"> 
 </head>
 <body>
     <header>
         <nav>
-          <a href="/index.html"><img src="/assets/imagem/heart.png" height="60" width="64"></a>
-            <a class="logo" href="/index.html">PrimeiroSaúde</a>
+          <a href="../index.html"><img src="../assets/imagem/heart.png" height="60" width="64"></a>
+            <a class="logo" href="../index.html">PrimeiroSaúde</a>
             <ul class="nav-list">
                  <div class="login-bottom">
-                <li><a href="/html/signin.html"><img src="/assets/imagem/iconlogin.png" alt="iconlogin" height="30" width="30"></a>
+                <li><a href="../html/signin.html"><img src="../assets/imagem/iconlogin.png" alt="iconlogin" height="30" width="30"></a>
                 </div>
                 </li>
             </ul>
