--- a/src/html/paginasintomas.html
+++ b/src/html/paginasintomas.html
@@ -6,30 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Página de Sintomas</title>
-    <link rel="stylesheet" href="/css/sintomas.css"> 
+    <link rel="stylesheet" href="../css/sintomas.css"> 
 </head>
 <header>
   <nav>
-    <a href="/index.html"><img src="/assets/imagem/heart.png" height="60" width="64"></a>
-      <a class="logo" href="/index.html">PrimeiroSaúde</a>
+    <a href="../index.html"><img src="../assets/imagem/heart.png" height="60" width="64"></a>
+      <a class="logo" href="../index.html">PrimeiroSaúde</a>
       <ul class="nav-list">
            <div class="login-bottom">
-          <li><a href="/html/signin.html"><img src="/assets/imagem/iconlogin.png" alt="iconlogin" height="30" width="30"></a>
+          <li><a href="../html/signin.html"><img src="../assets/imagem/iconlogin.png" alt="iconlogin" height="30" width="30"></a>
           </div>
           </li>
       </ul>
   </nav>
 <button type="button" class="media"> <!---class=media alterei para btn btn-info-->
-    <a href="/html/AVC.html"> 
-    <img src="/assets/imagem/iconavc.jpg" width="60" height="60" class="imgRedonda" alt="...">
+    <a href="../html/AVC.html"> 
+    <img src="../assets/imagem/iconavc.jpg" width="60" height="60" class="imgRedonda" alt="...">
     <div class="media-body">
       <h5 class="mt-0"> AVC </h5> </a>  <!-- coloquei o "<a> de link" dentro da imagem e tbm do texto-->
     </div>
   </button>
 
   <button type="button" class="media">
-    <a href="/html/Ataque.html">
-    <img src="/assets/imagem/iconcardiaco.JPG" width="60" height="60" class="imgRedonda" alt="...">
+    <a href="../html/Ataque.html">
+    <img src="../assets/imagem/iconcardiaco.JPG" width="60" height="60" class="imgRedonda" alt="...">
     <div class="media-body">
       <h5 class="mt-0">Ataque Cardíaco</h5> </a>
     </div>
@@ -37,16 +37,16 @@
  <!-- botões com link dentro do head??-->
 
  <button type="button" class="media">
-  <a href="/html/Ansiedade.html"> 
-  <img src="/assets/imagem/iconansiedade.JPG" width="60" height="60" class="imgRedonda" alt="...">
+  <a href="../html/Ansiedade.html"> 
+  <img src="../assets/imagem/iconansiedade.JPG" width="60" height="60" class="imgRedonda" alt="...">
   <div class="media-body"> 
     <h5 class="mt-0">Ansiedade</h5> </a>
   </div> 
 </button>
 
 <button type="button" class="media">
-  <a href="/html/Queda.html"> 
-  <img src="/assets/imagem/iconglicemia.JPG" width="60" height="60" class="imgRedonda" alt="...">
+  <a href="../html/Queda.html"> 
+  <img src="../assets/imagem/iconglicemia.JPG" width="60" height="60" class="imgRedonda" alt="...">
   <div class="media-body">
     <h5 class="mt-0">Queda de Glicemia</h5> </a>
   </div>
