--- a/src/html/paginicialglicemia.html
+++ b/src/html/paginicialglicemia.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Navbar</title>
-    <link rel="stylesheet" href="/css/navbarglicemia.css" />
+    <link rel="stylesheet" href="../css/paginicialglicemia.css" />
   </head>
   <body>
     <header>
@@ -17,19 +17,19 @@
           <div class="line3"></div>
         </div>
         <ul class="nav-list">
-          <li><a href="/html/registrodeglicemia.html"><img src="/assets/imagem/iconregistro.png" height="25" width="25"> Registro Glicêmico</a></li>
+          <li><a href="../html/registrodeglicemia.html"><img src="../assets/imagem/iconregistro.png" height="25" width="25"> Registro Glicêmico</a></li>
         </a>
-          <li><a href="/html/relatorioglicemia.html"><img src="/assets/imagem/iconrelatorio.png" height="25" width="25">  Gerar relatório Glicêmico</a></li>
-          <li><a href="/index.html"><img src="/assets/imagem/iconlogout.png" height="30" width="30"></a></li>
+          <li><a href="../html/relatorioglicemia.html"><img src="../assets/imagem/iconrelatorio.png" height="25" width="25">  Gerar relatório Glicêmico</a></li>
+          <li><a href="../index.html"><img src="../assets/imagem/iconlogout.png" height="30" width="30"></a></li>
         </ul>
       </nav>
     </header>
     <div class="container-r">
         <div class="card-r">
             <h1>Atenção</h1>
-            <p>Antes de realizar o registro dos niveís glicêmicos favor conferir se o usuário está logado, se não estiver faça o <a class="link" href="/src/html/Lorena/signin.html">login.</a></p>
+            <p>Antes de realizar o registro dos niveís glicêmicos favor conferir se o usuário está logado, se não estiver faça o <a class="link" href="../html/signin.html">login.</a></p>
         </div>
     </div>
-    <script src="/js/navbar.js"></script>
+    <script src="../js/navbar.js"></script>
   </body>
 </html>
