--- a/src/html/registrodeglicemia.html
+++ b/src/html/registrodeglicemia.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/src/css/Lucas/registrodeglicemia.css">
+    <link rel="stylesheet" href="../css/registrodeglicemia.css">
 </head>
 <body>
   <header>
     <nav>
-      <a href="/src/html/index.html"><img src="/src/assets/imagem/heart.png" height="60" width="64"></a>
-        <a class="logo" href="/src/html/index.html">PrimeiroSaúde</a>
+      <a href="../index.html"><img src="../assets/imagem/heart.png" height="60" width="64"></a>
+        <a class="logo" href="../index.html">PrimeiroSaúde</a>
         <ul class="nav-list">
              <div class="login-bottom">
-            <li><a href="/src/html/index.html"><img src="/src/assets/imagem/iconlogin.png" alt="iconlogin" height="30" width="30"></a>
+            <li><a href="../html/signin.html"><img src="../assets/imagem/iconlogin.png" alt="iconlogin" height="30" width="30"></a>
             </div>
             </li>
         </ul>
@@ -29,7 +29,7 @@
       <p>Email:</p>
       <input type="email" id="email" name="email">
       <div class='btn-enviar1'>
-        <a href="/src/html/Lucas/relatorioglicemia.html">
+        <a href="../html/relatorioglicemia.html">
         <button onclick='enviar()'>Enviar</button>
       </a>
     </div>
