--- a/src/html/primeiros-socorros.html
+++ b/src/html/primeiros-socorros.html
@@ -11,8 +11,8 @@
 <body>
   <header>
     <nav>
-      <a href="../../src/index.html"><img src="../assets/imagem/heart.png" height="60" width="64"></a>
-        <a class="logo" href="../../src/index.html">PrimeiroSaúde</a>
+      <a href="../index.html"><img src="../assets/imagem/heart.png" height="60" width="64"></a>
+        <a class="logo" href="../index.html">PrimeiroSaúde</a>
         <ul class="nav-list">
              <div class="login-bottom">
             <li><a href="../html/signin.html"><img src="../assets/imagem/iconlogin.png" alt="iconlogin" height="30" width="30"></a>
@@ -129,3 +129,4 @@
 </body>
 
 </html>
+
