--- a/src/html/signin.html
+++ b/src/html/signin.html
@@ -11,8 +11,8 @@
 </head>
 <body>
   <nav>
-    <img src="../assets/imagem/heart.png" alt="logo" height="70" width="70">
-    <a class="logo" href="../html/index.html">PrimeiroSaúde</a>
+    <a href="../index.html"> <img src="../assets/imagem/heart.png" alt="logo" height="70" width="70"></a>
+    <a class="logo" href="../index.html">PrimeiroSaúde</a>
     <ul class="nav-list">
          <div class="login-bottom">
         <li><a href="../html/signin.html"><img src="../assets/imagem/iconlogin.png" alt="iconlogin" height="30" width="30"></a>
@@ -38,7 +38,7 @@
           </div>
           
           <div class='remember-senha'>
-            <a class="logo-1" href='./esqueceusuasenha.html'>Esqueceu sua senha?</a>
+            <a class="logo-1" href='../html/esqueceusuasenha.html'>Esqueceu sua senha?</a>
           </div>
 
           <div class='justify-center'>
