--- a/src/html/signup.html
+++ b/src/html/signup.html
@@ -11,7 +11,7 @@
 </head>
 <body>
    <nav>
-      <img src="../assets/imagem/heart.png" alt="logo" height="70" width="70">
+      <a href="../index.html"> <img src="../assets/imagem/heart.png" alt="logo" height="70" width="70"></a>
       <a class="logo" href="../html/index.html">PrimeiroSaúde</a>
       <ul class="nav-list">
            <div class="login-bottom">
@@ -56,10 +56,12 @@
                   
                   <div class='justify-center'>
                      <button onclick='cadastrar()'>Cadastrar</button>
+                  
+
                   </div>
       </div>
     </div>
-    <script src="./signup.js"></script>
+    <script src="../js/signup.js"></script>
     <script src="../mobile-navbar.js"></script>
 </body>
 </html>
