--- a/src/html/paginicialglicemia.html
+++ b/src/html/paginicialglicemia.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <nav>
-        <a class="logo" href="/index.html">PrimeiroSaúde</a>
+        <a class="logo" href="../index.html">PrimeiroSaúde</a>
         <div class="mobile-menu">
           <div class="line1"></div>
           <div class="line2"></div>
