--- a/src/html/Ansiedade.html
+++ b/src/html/Ansiedade.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-          <a href="/src/index.html"><img src="../assets/imagem/heart.png" height="60" width="64"></a>
+          <a href="../index.html"><img src="../assets/imagem/heart.png" height="60" width="64"></a>
             <a class="logo" href="/src/index.html">PrimeiroSaúde</a>
             <ul class="nav-list">
                  <div class="login-bottom">
