--- a/src/html/telefonesuteis.html
+++ b/src/html/telefonesuteis.html
@@ -6,29 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Telefones Úteis</title>
-    <link rel="stylesheet" href="/css/sintomas.css"/> 
+    <link rel="stylesheet" href="../css/telefonesuteis.css"> 
 </head>
 <body>
 <header>
     <nav>
-      <a href="/index.html"><img src="/assets/imagem/heart.png" height="60" width="64"></a>
-        <a class="logo" href="/index.html">PrimeiroSaúde</a>
+      <a href="../index.html"><img src="../assets/imagem/heart.png" height="60" width="64"></a>
+        <a class="logo" href="../index.html">PrimeiroSaúde</a>
         <ul class="nav-list">
              <div class="login-bottom">
-            <li><a href="/html/signin.html"><img src="/assets/imagem/iconlogin.png" alt="iconlogin" height="30" width="30"></a>
+            <li><a href="../html/signin.html"><img src="../assets/imagem/iconlogin.png" alt="iconlogin" height="30" width="30"></a>
             </div>
             </li>
         </ul>
     </nav>
 <button type="button" class="media"> <!---class=media alterei para btn btn-info-->
-    <img src="/assets/imagem/bombeiro.jpg" width="60" height="60" class="imgRedonda" alt="...">
+    <img src="../assets/imagem/bombeiro.jpg" width="60" height="60" class="imgRedonda" alt="...">
     <div class="media-body">
       <h5 class="mt-0"> Bombeiros - 193 </h5>  <!-- coloquei o "<a> de link" dentro da imagem e tbm do texto-->
     </div>
   </button>
 
   <button type="button" class="media">
-    <img src="/assets/imagem/samu.jpg" width="60" height="60" class="imgRedonda" alt="...">
+    <img src="../assets/imagem/samu.jpg" width="60" height="60" class="imgRedonda" alt="...">
     <div class="media-body">
       <h5 class="mt-0">SAMU - 192</h5> 
     </div>
@@ -36,14 +36,14 @@
  <!-- botões com link dentro do head??-->
 
  <button type="button" class="media">
-  <img src="/assets/imagem/police.jpg" width="60" height="60" class="imgRedonda" alt="...">
+  <img src="../assets/imagem/police.jpg" width="60" height="60" class="imgRedonda" alt="...">
   <div class="media-body"> 
     <h5 class="mt-0">Polícia Militar - 190</h5> 
   </div> 
 </button>
 
 <button type="button" class="media">
-  <img src="/assets/imagem/CVV.jpg" width="60" height="60" class="imgRedonda" alt="...">
+  <img src="../assets/imagem/CVV.jpg" width="60" height="60" class="imgRedonda" alt="...">
   <div class="media-body">
     <h5 class="mt-0">Centro de Valorização da Vida - 188</h5> 
   </div>
