--- a/src/html/sobrenos.html
+++ b/src/html/sobrenos.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Sobre Nós</title>
-<link rel="stylesheet" href="/src/css/sobrenos.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/sobrenos.css">
+    <title>Document</title>
 </head>
 <body>
-  <h1>O sistema criado pelos alunos da Universidade PUC Minas</h1>
-  <p>é uma plataforma de gerenciamento de conteúdo médico online. Além de permitir a exibição de mapas para localização de clínicas e hospitais, o sistema também conta com recursos para o registro de sintomas de doenças e medição de glicemia.</p>
+    <header>
+        <nav>
+          <a href="../index.html"><img src="../assets/imagem/heart.png" height="60" width="64"></a>
+          <a class="logo" href="../index.html">PrimeiroSaúde</a>
+          <ul class="nav-list">
+            <div class="login-bottom">
+              <li><a href="../html/signin.html"><img src="../assets/imagem/iconlogin.png" alt="iconlogin" height="30"
+                    width="30"></a>
+            </div>
+            </li>
+          </ul>
+        </nav>
+        <div class='container-s'>
+            <div class='card-s'>
+        <h1> Sobre nós </h1><br>
+            <p>O sistema criado pelos alunos da Universidade PUC Minas
+  é uma plataforma de gerenciamento de conteúdo médico online. Além de permitir a exibição de mapas para localização de clínicas e hospitais, o sistema também conta com recursos para o registro de sintomas de doenças e medição de glicemia.</p>
+</p>
 </body>
 </html>
