--- a/src/html/esqueceusuasenha.html
+++ b/src/html/esqueceusuasenha.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <img src="../assets/imagem/heart.png" alt="logo" height="62" width="64">
+        <a href="../index.html"><img src="../assets/imagem/heart.png" alt="logo" height="62" width="64"></a>
         <a class="logo" href="../html/index.html">PrimeiroSaúde</a>
         <ul class="nav-list">
              <div class="login-bottom">
