--- a/src/html/politicadeprivacidade.html
+++ b/src/html/politicadeprivacidade.html
@@ -10,8 +10,8 @@
 <body>
     <header>
         <nav>
-          <a href="../html/index.html"><img src="../assets/imagem/heart.png" height="60" width="64"></a>
-            <a class="logo" href="../html/index.html">PrimeiroSaúde</a>
+          <a href="../index.html"><img src="../assets/imagem/heart.png" height="60" width="64"></a>
+            <a class="logo" href="../index.html">PrimeiroSaúde</a>
             <ul class="nav-list">
                  <div class="login-bottom">
                 <li><a href="../html/signin.html"><img src="../assets/imagem/iconlogin.png" alt="iconlogin" height="30" width="30"></a>
