--- a/src/html/esqueceusuasenha.html
+++ b/src/html/esqueceusuasenha.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <nav>
-        <a href="../index.html"><img src="../assets/imagem/heart.png" alt="logo" height="62" width="64"></a>
-        <a class="logo" href="../html/index.html">PrimeiroSaúde</a>
+        <a href="../index.html"> <img src="../assets/imagem/heart.png" alt="logo" height="62" width="64"></a>
+        <a class="logo" href="../index.html">PrimeiroSaúde</a>
         <ul class="nav-list">
              <div class="login-bottom">
             <li><a href="../html/signin.html"><img src="../assets/imagem/iconlogin.png" alt="iconlogin" height="30" width="30"></a>
