--- a/src/html/registrodeglicemia.html
+++ b/src/html/registrodeglicemia.html
@@ -27,7 +27,7 @@
       <p>Hora:</p>
       <input type="time" id="hora" name="hora">
       <p>Email:</p>
-      <input type="email" id="email" name="email">
+      <input type="number" id="number" name="Índice">
       <div class='btn-enviar1'>
         <a href="../html/relatorioglicemia.html">
         <button onclick='enviar()'>Enviar</button>
