--- a/src/html/registrodeglicemia.html
+++ b/src/html/registrodeglicemia.html
@@ -26,8 +26,8 @@
       <input type="date" id="data" name="data">
       <p>Hora:</p>
       <input type="time" id="hora" name="hora">
-      <p>Email:</p>
-      <input type="number" id="number" name="Índice">
+      <p>Índice:</p>
+      <input type="number" id="float" name="indice">
       <div class='btn-enviar1'>
         <a href="../html/relatorioglicemia.html">
         <button onclick='enviar()'>Enviar</button>
