--- a/src/html/registrodeglicemia.html
+++ b/src/html/registrodeglicemia.html
@@ -27,7 +27,8 @@
       <p>Hora:</p>
       <input type="time" id="hora" name="hora">
       <p>Índice:</p>
-      <input type="number" id="float" name="indice">
+      <label for="totalAmt">Total Amount</label>
+      <input type="number" step="0.01" id="totalAmt" name="indice">
       <div class='btn-enviar1'>
         <a href="../html/relatorioglicemia.html">
         <button onclick='enviar()'>Enviar</button>
