--- a/src/html/registrodeglicemia.html
+++ b/src/html/registrodeglicemia.html
@@ -28,7 +28,8 @@
       <input type="time" id="hora" name="hora">
       <p>Índice:</p>
       <label for="totalAmt">Total Amount</label>
-      <input type="number" step="0.01" id="totalAmt" name="indice">
+      <input type="number" id="totalAmt" min="0" 
+        max="1000" step="0.01" name="indice">
       <div class='btn-enviar1'>
         <a href="../html/relatorioglicemia.html">
         <button onclick='enviar()'>Enviar</button>
