--- a/src/html/registrodeglicemia.html
+++ b/src/html/registrodeglicemia.html
@@ -27,7 +27,7 @@
       <p>Hora:</p>
       <input type="time" id="hora" name="hora">
       <p>Índice:</p>
-      <label for="totalAmt">Total Amount</label>
+      <label for="totalAmt"</label>
       <input type="number" id="totalAmt" min="0" 
         max="1000" step="0.01" name="indice">
       <div class='btn-enviar1'>
