--- a/src/index.html
+++ b/src/index.html
@@ -46,35 +46,35 @@
     <button type="button" class="media">
       <div class="media-body">
         <a href="../src/html/paginicialglicemia.html">
-          <img src="../src/assets/imagem/controleicon.png" width="90" height="90" class="mr-3" alt="...">
-          <h4 class="mt-0">Controle Glicêmico</h4>
-          <h5 class="text-p">Registre seu nível glicêmico diaramente.</h5>
+          <img src="../src/assets/imagem/controleicon.png" width="64" height="64" class="mr-3" alt="...">
+          <h5 class="mt-0">Controle Glicêmico</h5>
+          <p class="text-p">Registre seu nível glicêmico diaramente.</p>
         </a>
       </div>
     </button>
     <button type="button" class="media">
-      <img src="../src/assets/imagem/iconprimeirossocorros.png" width="90" height="90" class="mr-3" alt="...">
+      <img src="../src/assets/imagem/iconprimeirossocorros.png" width="64" height="64" class="mr-3" alt="...">
         <a href="../src/html/primeiros-socorros.html">
-          <h4 class="mt-0">Guia de Primeiros Socorros.</h4>
-          <h5 class="mt-0">Lista de Primeiros Socorros.</h5>
+          <h5 class="mt-0">Guia de Primeiros Socorros.</h5>
+          <p class="mt-0">Lista de Primeiros Socorros.</p>
         </a>
 
       </div>
       <button type="button" class="media">
-        <img src="../src/assets/imagem/sintomasicon.png" width="90" height="90" class="mr-3" alt="...">
+        <img src="../src/assets/imagem/sintomasicon.png" width="64" height="64" class="mr-3" alt="...">
         <div class="media-body">
           <a href="../src/html/paginasintomas.html">
-            <h4 class="mt-0">Guia informativo sobre Sintomas.</h4>
-            <h5 class="mt-0">Identifique sintomas de infarto, avc e mais.</h5>
+            <h5 class="mt-0">Guia informativo sobre Sintomas.</h5>
+            <p class="mt-0">Identifique sintomas de infarto, avc e mais.</p>
           </a>
         </div>
       </button>
       <button type="button" class="media">
-        <img src="../src/assets/imagem/acidentedomestico64.png" width="90" height="90" class="mr-3" alt="...">
+        <img src="../src/assets/imagem/acidentedomestico64.png" width="64" height="64" class="mr-3" alt="...">
         <div class="media-body">
           <a href="../src/html/prevencaodeacidentes.html">
-            <h4 class="mt-0">Previna acidentes domésticos.</h4>
-            <h5 class="mt-0">Guia auto explicativo sobre como evitar acidentes domésticos.</h5>
+            <h5 class="mt-0">Previna acidentes domésticos.</h5>
+            <p class="mt-0">Guia auto explicativo sobre como evitar acidentes domésticos.</p>
           </a>
         </div>
       </button>
