--- a/src/html/signup.html
+++ b/src/html/signup.html
@@ -12,10 +12,10 @@
 <body>
    <nav>
       <a href="../index.html"> <img src="../assets/imagem/heart.png" alt="logo" height="70" width="70"></a>
-      <a class="logo" href="../html/index.html">PrimeiroSaúde</a>
+      <a class="logo" href="/src/index.html">PrimeiroSaúde</a>
       <ul class="nav-list">
            <div class="login-bottom">
-          <li><a href="../html/signin.html"><img src="../assets/imagem/iconlogin.png" alt="iconlogin" height="30" width="30"></a>
+          <li><a href="../html/signin.html"><img src="../assets/imagem/iconlogin.png" alt="iconlogin" height="40" width="40"></a>
           </div>
           </li>
       </ul>
