--- a/src/html/esqueceusuasenha.html
+++ b/src/html/esqueceusuasenha.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/esqueceusuasenha.css">
     <title>Recupere sua senha</title>
 </head>
+
 <body>
     <nav>
         <a href="../index.html"> <img src="../assets/imagem/heart.png" alt="logo" height="62" width="64"></a>
         <a class="logo" href="../index.html">PrimeiroSaúde</a>
         <ul class="nav-list">
-             <div class="login-bottom">
-            <li><a href="../html/signin.html"><img src="../assets/imagem/iconlogin.png" alt="iconlogin" height="40" width="40"></a>
+            <div class="login-bottom">
+                <li><a href="../html/signin.html"><img src="../assets/imagem/iconlogin.png" alt="iconlogin" height="40"
+                            width="40"></a>
             </div>
             </li>
         </ul>
@@ -23,13 +26,21 @@
         <div class='card1'>
             <h2>Esqueceu sua senha?</h2>
             <div class='label-float'>
-                <h4>Enviaremos um e-mail com instruções de como recuperar sua senha.</h4>
-                <p>E-mail:  <input id="nome" type="text"></p>
-                <div class='btn-enviar'>
+                <h4>Confirme seu cpf.</h4>
+                <p>CPF: <input oninput="mascara(this)" id="cpf" type="text"></p>
+                <div id='divBotao' class='btn-enviar'>
                     <button onclick='enviar()'>ENVIAR</button>
+                </div>
+                <p id="novaSenhap" style="display: none;">Nova senha: <input id="novaSenha" type="text"></p>
+                <p id="confirmaSenhap" style="display: none;">Confirme a senha: <input id="confirmaSenha" type="text"></p>
+                <div id='botaoConfirmaSenha' style="display: none;" class='btn-enviar'>
+                    <button onclick='salvarSenha()'>Salvar</button>
                 </div>
             </div>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="../js/esqueceusenha.js"></script>
 </body>
+
 </html>
