--- a/src/html/signup.html
+++ b/src/html/signup.html
@@ -31,6 +31,11 @@
                      <input type="text" id="nome" placeholder=" " required>
                      <label id="labelNome" for="nome">Nome</label>
                   </div>
+
+                  <div class="label-float">
+                     <input type="text" id="cpf" oninput="mascara(this)" placeholder=" " required>
+                     <label id="labelcpf" for="cpf">CPF</label>
+                  </div>
       
                   <div class="label-float">
                      <input type="text" id="usuario" placeholder=" " required>
