--- a/src/html/AVC.html
+++ b/src/html/AVC.html
@@ -44,8 +44,8 @@
             Lembre-se: não administre nenhum tipo de medicamento em casa e nem espere os sintomas regredirem sozinhos. Procure o serviço de urgência imediatamente!
                 </dl> 
             </p>
+    <dt>  Fonte: Manual de Primeiros Socorros, Fundação Oswaldo Cruz.</dt>
     </div>
     </div>
 </body>
-    Fonte: Manual de Primeiros Socorros, Fundação Oswaldo Cruz.
 </html>
