--- a/src/html/Ansiedade.html
+++ b/src/html/Ansiedade.html
@@ -32,6 +32,7 @@
                   </dd>
             </dl> 
            </p>
+                 <dt>  Fonte: Manual de Primeiros Socorros, Fundação Oswaldo Cruz.</dt>
            </div>
         </div>
 </body>
