--- a/src/html/Ansiedade.html
+++ b/src/html/Ansiedade.html
@@ -28,9 +28,9 @@
                   <dd>*  A garganta parece estar se fechando e a respiração fica ofegante, gerando muita dificuldade para respirar.  </dd> 
                   <dt>* Sentimento de medo constante, enxergando perigo em tudo. </dt> 
                   <dd>* Fobia de entrar em locais rotineiros (elevadores, avião, etc.). </dd> 
-                  <dd>* Fobia de socializar. 
-                  </dd>
-                <dt>  Fonte: Manual de Primeiros Socorros, Fundação Oswaldo Cruz.</dt>
+                  <dd>* Fobia de socializar.  
+                <dt>  Fonte: Manual de Primeiros Socorros, Fundação Oswaldo Cruz.</dt> </dd>
+               
             </dl> 
 
            </p>
