--- a/src/html/Queda.html
+++ b/src/html/Queda.html
@@ -29,6 +29,7 @@
        <dt> Cardiovasculares: aumento da frequência cardíaca, alteração da pressão arterial.</dt> 
        <dt> Autonomicos: palidez, sudorese. </dt>
        <dd> Gastrointestinais: náusea, vomito, sensação de fome. 
+            <dt>  Fonte: Manual de Primeiros Socorros, Fundação Oswaldo Cruz.</dt>
        </dd> 
     </dl> 
 </p>
