--- a/src/html/Ataque.html
+++ b/src/html/Ataque.html
@@ -29,7 +29,8 @@
                    <dd> Podem ser acompanhados de suor excessivo, palidez e alteração na frequência cardíaca. </dd> 
                    <dd> Em idosos, o principal sintoma pode ser a falta de ar ou dor também pode ser no abdome, semelhante à dor de uma gastrite ou esofagite de refluxo. </dd> 
                 </dl> 
-            <dl> Ao identificar os sintomas de um ataque cardíaco o ideal é acionar o serviço de urgência de referência o mais breve possível. </dl>
+            <dl> Ao identificar os sintomas de um ataque cardíaco o ideal é acionar o serviço de urgência de referência o mais breve possível. 
+             <dt>  Fonte: Manual de Primeiros Socorros, Fundação Oswaldo Cruz.</dt> </dl>
                  </p>
             </div>
         </div>
